--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.11.0",
     "axios": "^1.6.8",
+    "bcrypt": "^5.1.1",
     "next": "14.1.3",
+    "next-auth": "^4.24.7",
+    "prisma": "^5.11.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.1",
